--- a/Resources/views/AdminPages/settings.html.twig
+++ b/Resources/views/AdminPages/settings.html.twig
@@ -5,7 +5,7 @@
 
 	<div class="row">
 		<div class="span3">
-			{% render 'NSCmsBundle:AdminPages:blockPagesTree' %}
+			{{ render(controller('NSCmsBundle:AdminPages:blockPagesTree'))  }}
 		</div>
 		<div class="span9">
 			{% include 'NSCmsBundle:AdminPages:block-page-tabs.html.twig' with {active: tab, pageId: pageId} %}
