--- a/Resources/views/AdminContent/index.html.twig
+++ b/Resources/views/AdminContent/index.html.twig
@@ -5,7 +5,7 @@
 
 	<div class="row">
 		<div class="span3">
-			{% render 'NSCmsBundle:AdminPages:blockPagesTree' %}
+			{{ render(content('NSCmsBundle:AdminPages:blockPagesTree')) }}
 		</div>
 		<div class="span9">
 			<ul class="nav nav-tabs">
