--- a/Resources/views/AdminPages/blocks.html.twig
+++ b/Resources/views/AdminPages/blocks.html.twig
@@ -192,7 +192,7 @@
 
 	<div class="row">
 		<div class="span3">
-			{% render 'NSCmsBundle:AdminPages:blockPagesTree' %}
+			{{ render(controller('NSCmsBundle:AdminPages:blockPagesTree')) }}
 		</div>
 		<div class="span9">
 			{% include 'NSCmsBundle:AdminPages:block-page-tabs.html.twig' with {active: 'blocks', pageId: page.id} %}
