--- a/Resources/views/Pages/page.html.twig
+++ b/Resources/views/Pages/page.html.twig
@@ -7,7 +7,7 @@
 		{% for block in blocks %}
 			{% if block.areaName == 'top' %}
 				<div>{{ block.typeName }}</div>
-				{% render block.typeName with { block: block } %}
+				{{ block.html | raw }}
 			{% endif %}
 		{% endfor %}
 	</div>
@@ -17,7 +17,7 @@
 		{% for block in blocks %}
 			{% if block.areaName == 'content' %}
 				<div>{{ block.typeName }}</div>
-				{% render block.typeName with { block: block } %}
+				{{ block.html | raw }}
 			{% endif %}
 		{% endfor %}
 	</div>
