NEW Added background for fixed block areas

--- a/Resources/views/AdminPages/blocks.html.twig
+++ b/Resources/views/AdminPages/blocks.html.twig
@@ -188,7 +188,7 @@
 			display: inline;
 		}
 		.block-area.fixed {
-			background: #f9f9f9;
+			background: #f9f9f9 url('/bundles/nsadmin/images/ps_neutral.png');
 		}
 
 	</style>
