NEW Added human-readable bundle title support

--- a/Resources/views/AdminPages/blocks.html.twig
+++ b/Resources/views/AdminPages/blocks.html.twig
@@ -226,7 +226,7 @@
 						{% for blockType in blockTypes %}
 							{% if bundle != blockType.bundle %}
 								{% set bundle = blockType.bundle %}
-								<h4>{{ bundle.name }}</h4>
+								<h4>{{ bundle.title is defined ? bundle.title : bundle.name }}</h4>
 							{% endif %}
 							{{ _self.block_item(null, blockType.name, blockType.title) }}
 						{% endfor %}
