--- a/Resources/views/Pages/page.html.twig
+++ b/Resources/views/Pages/page.html.twig
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
     {# HEAD STYLES #}
     {% block head_styles %}
         {{ ns_cdn('bootstrap-2-css') }}
