NEW Added block admin template autocomplete

--- a/Resources/views/AdminBlocks/general.html.twig
+++ b/Resources/views/AdminBlocks/general.html.twig
@@ -11,4 +11,13 @@
 		<button class="btn btn-success">Сохранить</button>
 		<a href="{{ redirect }}" class="btn">Отмена</a>
 	</form>
+
+    <script type="text/javascript">
+        (function($){
+            var templates = ['{{ templates|join("', '")|raw }}'];
+            $('#ns_cmsbundle_blocktype_template').autocomplete({
+                source: templates
+            });
+        })(jQuery);
+    </script>
 {% endblock %}
